# rquickshare

./: .gitignore  Cargo.toml  TODO.md  build.rs  index.html  vite.config.ts
app/main/: package.json  pnpm-lock.yaml
core_lib/: Cargo.toml
src/: main.rs
src-tauri/src/: main.rs
src-tauri/src/cmds/: send_payload.rs
src-tauri/src/rqs/: lib.rs  manager.rs  utils.rs
src-tauri/src/rqs/hdl/: inbound.rs  mdns.rs  mdns_discovery.rs  mod.rs  outbound.rs
src/cmds/: discovery.rs  get_hostname.rs  is_ready.rs  mod.rs  send_to_rs.rs
src/rqs/: channel.rs  lib.rs  manager.rs  utils.rs
src/rqs/hdl/: inbound.rs  info.rs  mdns.rs  mdns_discovery.rs  mod.rs  outbound.rs
