[package]
name = "rquickshare"
version = "0.11.5"
edition = "2024"
authors = ["martichou"]
repository = "https://github.com/Martichou/rquickshare"
license = "AGPL-3.0"

[lib]
name = "rqs"
path = "src-tauri/src/rqs/lib.rs"

[[bin]]
name = "rquickshare"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }

[dependencies]
# Core library dependencies
anyhow = "1.0"
base64 = "0.22"
btleplug = { version = "0.11", optional = true }
bytes = "1.11"
directories = "6.0"
futures = "0.3"
get_if_addrs = "0.5"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
hostname = "0.4"
libaes = "0.7"
log = "0.4"
mdns-sd = { git = "https://github.com/Martichou/mdns-sd", branch = "unsolicited" }
mime_guess = "2.0"
num-bigint = "0.4"
p256 = { version = "0.13", features = ["ecdh"] }
prost = "0.14"
rand = "0.9"
sha2 = "0.10"
uuid = "1.20"

# Tauri dependencies
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["rustls-tls", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }

[features]
default = ["custom-protocol", "experimental"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
experimental = ["bluer", "btleplug"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2

[lints.clippy]
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"
# These are warnings for now - require extensive refactoring
unwrap_used = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cognitive_complexity = "warn"

# These are denied
let_underscore_must_use = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
too_many_arguments = "deny"
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
